# openapi-to-fastapi

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.js  .prettierrc.yaml  .skjoldignore  .travis.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tasks.py
.github/: CONTRIBUTING.md
.github/workflows/: publish.yaml  test_latest_python.yaml  tests.yaml
openapi_to_fastapi/: cli.py  logger.py  model_generator.py  models.py  parser.py  pydantic_validators.py  routes.py  utils.py
openapi_to_fastapi/tests/: conftest.py  test_ihan_standards.py  test_router.py
openapi_to_fastapi/tests/__snapshots__/test_router/: test_custom_route_definitions.json  test_validation[bool-as-int].json  test_validation[bool-as-null].json  test_validation[bool-as-random-text].1.json  test_validation[bool-as-random-text].json  test_validation[bool-as-string].json  test_validation[date-as-month-00].json  test_validation[date-as-month].1.json  test_validation[date-as-month].json  test_validation[date-as-unixtimestamp-day].json  test_validation[date-as-unixtimestamp-offset0].1.json  test_validation[date-as-unixtimestamp-offset1].1.json  test_validation[date-as-unixtimestamp-str-day].json  test_validation[date-as-unixtimestamp-str].json  test_validation[date-as-unixtimestamp].json  test_validation[datetime-as-unixtimestamp-day].json  test_validation[datetime-as-unixtimestamp-offset].json  test_validation[datetime-as-unixtimestamp-str-day].json  test_validation[datetime-as-unixtimestamp-str-offset].json  test_validation[datetime-as-unixtimestamp-str].json  test_validation[datetime-as-unixtimestamp].json  test_validation[datetime-lower-case-t].json  test_validation[datetime-lower-case-z].json  test_validation[datetime-naive].json  test_validation[datetime-with-space].json  test_validation[float-as-string].json  test_validation[int-as-float].json  test_validation[int-as-string].json  test_validation[list-dt-as-unixtimestamp-day].json  test_validation[list-dt-as-unixtimestamp-offset].json  test_validation[list-dt-as-unixtimestamp-str-day].json  test_validation[list-dt-as-unixtimestamp-str-offset].json  test_validation[list-dt-as-unixtimestamp-str].json  test_validation[list-dt-as-unixtimestamp].json  test_validation[list-dt-lower-case-t].json  test_validation[list-dt-lower-case-z].json  test_validation[list-dt-naive].json  test_validation[list-dt-with-space].json  test_validation[string-as-float].1.json  test_validation[string-as-int].json  (+2 more)
openapi_to_fastapi/tests/data/definitions/: CoffeeBrewer.json  CompanyBasicInfo.json  TestValidation_v0.1.json  TestValidation_v0.2.json  WeatherCurrentMetric.json
openapi_to_fastapi/tests/data/ihan/: CompanyBasicInfo.json  CompanyBasicInfo.jsonld  WeatherCurrentMetric.json
openapi_to_fastapi/tests/snapshots/: snap_test_router.py
openapi_to_fastapi/validator/: __init__.py  core.py  ihan_standards.py
(+2 files in other folders)
