[tool.poetry]
name = "openapi-to-fastapi"
version = "0.16.0"
description = "Create FastAPI routes from OpenAPI spec"
authors = ["IOXIO Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/openapi-to-fastapi"
packages = [
    {include="openapi_to_fastapi", from="."}
]

[tool.poetry.scripts]
openapi-validator = "openapi_to_fastapi.cli:cli_validate_specs"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
datamodel-code-generator = "^0.25.6"
fastapi = "^0.111.0"
click = "^8.1.7"
coloredlogs = "^15.0.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
flake8 = "^7.0.0"
mypy = "^1.10.0"
invoke = "^2.2.0"
httpx = "^0.27.0"
syrupy = "^4.6.1"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
