[tool.poetry]
name = "openapi-to-fastapi"
version = "0.19.0"
description = "Create FastAPI routes from OpenAPI spec"
authors = ["IOXIO Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/openapi-to-fastapi"
packages = [
    {include="openapi_to_fastapi", from="."}
]

[tool.poetry.scripts]
openapi-validator = "openapi_to_fastapi.cli:cli_validate_specs"

[tool.poetry.dependencies]
python = "^3.9"
datamodel-code-generator = "^0.32.0"
fastapi = "^0.116.1"
click = "^8.1.8"
coloredlogs = "^15.0.1"
pydantic = {version = "^2.11.1", extras = ["email"]}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
invoke = "^2.2.0"
httpx = "^0.27.2"
syrupy = "^4.7.2"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
